--- a/gst-plugins-good/po/cs.po
+++ b/gst-plugins-good/po/cs.po
@@ -4,20 +4,18 @@
 # This file is put in the public domain.
 # Miloslav Trmac <mitr@volny.cz>, 2004.
 # Petr Kovar <pknbe@volny.cz>, 2007, 2008, 2009.
-#
 msgid ""
 msgstr ""
-"Project-Id-Version: gst-plugins-good-0.10.14.2\n"
+"Project-Id-Version: gst-plugins-good-0.10.15.2\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2009-08-14 17:38+0100\n"
-"PO-Revision-Date: 2009-05-15 19:37+0200\n"
+"POT-Creation-Date: 2009-08-24 17:32+0100\n"
+"PO-Revision-Date: 2009-08-17 01:30+0200\n"
 "Last-Translator: Petr Kovar <pknbe@volny.cz>\n"
 "Language-Team: Czech <translation-team-cs@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=(n==1) ? 0 : (n>=2 && n<=4) ? 1 : 2;\n"
-"X-Generator: KBabel 1.11.4\n"
 
 msgid "Could not establish connection to sound server"
 msgstr "Nezdařilo se navázání spojení se zvukovým serverem"
@@ -178,24 +176,23 @@ msgstr "Zvukové zařízení nelze otevřít k nahrávání."
 msgid "Gain"
 msgstr "Zesílení"
 
-#, fuzzy
 msgid "Built-in Speaker"
-msgstr "Reproduktor"
+msgstr "Zabudovaný reproduktor"
 
 msgid "Headphone"
-msgstr ""
+msgstr "Sluchátko"
 
 msgid "Line Out"
-msgstr ""
+msgstr "Linkový výstup"
 
 msgid "SPDIF Out"
-msgstr ""
+msgstr "Výstup SPDIF"
 
 msgid "AUX 1 Out"
-msgstr ""
+msgstr "Výstup AUX 1"
 
 msgid "AUX 2 Out"
-msgstr ""
+msgstr "Výstup AUX 2"
 
 #, c-format
 msgid "Error reading %d bytes from device '%s'."
@@ -249,9 +246,9 @@ msgstr "Nelze otevřít zařízení \"%s\" ke čtení a k zápisu."
 msgid "Device '%s' is not a capture device."
 msgstr "Zařízení \"%s\" není záznamovým zařízením."
 
-#, fuzzy, c-format
+#, c-format
 msgid "Device '%s' is not a output device."
-msgstr "Zařízení \"%s\" není záznamovým zařízením."
+msgstr "Zařízení \"%s\" není výstupním zařízením."
 
 #, c-format
 msgid "Failed to set norm for device '%s'."
@@ -323,52 +320,3 @@ msgstr "Změna rozlišení za běhu doposud není podporována."
 
 msgid "Cannot operate without a clock"
 msgstr "Není možné fungovat bez hodin"
-
-#~ msgid "Failed to enumerate possible video formats device '%s' can work with"
-#~ msgstr ""
-#~ "Nezdařilo se zjištění možných videoformátů, se kterými je zařízení \"%s\" "
-#~ "schopno pracovat"
-
-#~ msgid ""
-#~ "The buffer type is not supported, or the index is out of bounds, or no "
-#~ "buffers have been allocated yet, or the userptr or length are invalid. "
-#~ "device %s"
-#~ msgstr ""
-#~ "Typ vyrovnávací paměti není podporován, nebo je zakázaný index, popřípadě "
-#~ "nebyla alokována žádná vyrovnávací paměť, či userptr nebo length jsou "
-#~ "neplatné. Zařízení %s"
-
-#~ msgid ""
-#~ "Failed trying to get video frames from device '%s'. Not enough memory."
-#~ msgstr ""
-#~ "Nezdařilo se získání videosnímků ze zařízení \"%s\". Nedostatek paměti."
-
-#~ msgid "insufficient memory to enqueue a user pointer buffer. device %s."
-#~ msgstr ""
-#~ "nedostatek paměti k zařazení vyrovnávací paměti uživatelského ukazovátka. "
-#~ "Zařízení %s."
-
-#~ msgid "No free buffers found in the pool at index %d."
-#~ msgstr "Na indexu %d nenalezena žádná volná vyrovnávací paměť ve sdílení."
-
-#~ msgid "Device '%s' does not support video capture"
-#~ msgstr "Zařízení \"%s\" nepodporuje záznam videa"
-
-#~ msgid "Device '%s' cannot capture at %dx%d"
-#~ msgstr "Zařízení \"%s\" není schopno zachytávat na %dx%d"
-
-#~ msgid "Device '%s' cannot capture in the specified format"
-#~ msgstr "Zařízení \"%s\" není schopno zaznamenávat v určeném formátu"
-
-#~ msgid "Could not get buffers from device '%s'."
-#~ msgstr "Nezdařilo se získání vyrovnávací paměti ze zařízení \"%s\"."
-
-#~ msgid "Could not get enough buffers from device '%s'."
-#~ msgstr ""
-#~ "Nezdařilo se získání dostatečné vyrovnávací paměti ze zařízení \"%s\"."
-
-#~ msgid "Error starting streaming capture from device '%s'."
-#~ msgstr "Chyba při spouštění proudového záznamu ze zařízení \"%s\"."
-
-#~ msgid "Error stopping streaming capture from device '%s'."
-#~ msgstr "Chyba při zastavování proudového záznamu ze zařízení \"%s\"."
